Made Vim button clickable & fixed nav bar on Safari.

--- a/resources/public/styles.css
+++ b/resources/public/styles.css
@@ -95,15 +95,14 @@ nav {
 nav>ul {
   display: flex;
   justify-content: space-evenly;
+  display: -webkit-box;
+  -webkit-box-pack: center; /* justify-content */
+  -webkit-box-align: center; /* align-items */
 }
 
-
-#sitename {
-  color: ;
-}
-
-#sitename:hover {
-  color: ;
+nav>ul>li {
+  margin-left: 1em;
+  margin-right: 1em;
 }
 
 /*  Forms style. */
